--- a/src/components/ChatView/ChatInput.module.css
+++ b/src/components/ChatView/ChatInput.module.css
@@ -1,14 +1,41 @@
 .main {
+  height: 50px;
+  width: 100%;
+  margin-bottom: 0px;
+  animation-duration: 0.2s;
+  margin-bottom: 16px;
+}
+
+.inputContainer {
   background-color: #232323;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 100%;
   border-radius: 10px;
-  margin-bottom: 20px;
-  ;
+}
+
+.top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding-bottom: 10px;
+}
+
+.loadingText {
+  font-size: 13px;
+  color: rgb(122, 122, 122);
+  margin-left: 10px;
+}
+
+.indicator {
+  height: 10px;
+  width: 10px;
+
+
 }
 
 .input {
@@ -18,9 +45,5 @@
   border-color: transparent;
   padding: 5px 2px;
   border-color: transparent;
-  outline-width: 0;
-}
-
-input.middle:focus {
   outline-width: 0;
 }
