--- a/src/components/ChatView/MessagesContainer.module.css
+++ b/src/components/ChatView/MessagesContainer.module.css
@@ -1,21 +1,23 @@
 .main {
   display: flex;
-  height: 100%;
+  height: 85%;
   width: 100%;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   overflow-y: scroll;
-  overflow-anchor: auto;
+  overflow: hidden;
+  padding-bottom: 20px;
 }
 
 .message {
   height: auto;
   display: flex;
-  font-size: 13px;
+  font-size: 14px;
   width: 100%;
   font: 'Inter';
   animation: fadeInFromBottom 0.1s ease-in-out;
+  overflow-wrap: break-word;
 }
 
 .bot {
@@ -31,7 +33,7 @@
   max-width: 80%;
   padding: 1rem;
   margin-top: 10px;
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 .botBubble {
@@ -50,7 +52,7 @@
 @keyframes fadeInFromBottom {
   0% {
     opacity: 0.5;
-    transform: translateY(10%);
+    transform: translateY(15%);
   }
 
   100% {
