--- a/src/components/ChatView/index.module.css
+++ b/src/components/ChatView/index.module.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 0 2rem 0 2rem;
-  height: 800px;
-  width: 700px;
+  padding: 0 1rem 0 1rem;
+  height: 100%;
+  max-width: 700px;
+  min-width: 450px;
+  border-radius: 20px;
 }
