--- a/src/components/ChatView/index.module.css
+++ b/src/components/ChatView/index.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 0 1rem 0 1rem;
   height: 100%;
-  max-width: 700px;
+  max-width: 800px;
   min-width: 450px;
-  border-radius: 20px;
+  animation-duration: 0.2s;
 }
