--- a/src/components/DataView/index.module.css
+++ b/src/components/DataView/index.module.css
@@ -7,5 +7,18 @@
   margin-right: 30px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  padding: 10px 0;
+  padding-top: 15px;
+  animation: fadeInFromLeft 0.2s ease-in-out;
+}
+
+@keyframes fadeInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-25px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
