--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,9 +15,7 @@
   align-items: center;
   width: 100%;
   height: 80vh;
-  /* max-width: var(--max-width);
-  margin: 0 auto;
-  z-index: 2; */
+  animation-duration: 0.3s;
 }
 
 .description {
